--- a/templates/index.html
+++ b/templates/index.html
@@ -12,17 +12,50 @@
                 {% else %}
                     {% for year in modules %}
                         <h2>{{ year }}</h2>
-                        <ul>
-                            {% for module in modules[year] %}
-                            <li {% if module['pushed'] %} style="color: red;" {% endif %}>{{ module['moduleID'] }} <a href="https://www.notion.so/{{ module['moduleNotionID'] }}">LINK</a></li>
-                            {% endfor %}
-                        </ul>
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Module</th>
+                                    <th scope="col">Link</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for module in modules[year] %}
+                                <tr>
+                                    <td>{{ module['moduleID'] }}</td>
+                                    <td>
+                                        {% if module['pushed'] %}
+                                            <a href="https://www.notion.so/{{ module['moduleNotionID'] }}" target="_blank">notion.so</a>
+                                        {% else %}
+                                            <form method="POST">
+                                                <input type="hidden" name="moduleID" value="{{ module['moduleID'] }}">
+                                                <button type="submit" name="action" formaction="/pushcourse">Push to Notion</button>
+                                            </form>
+                                        {% endif %}
+                                    </td>
+                                </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
                     {% endfor %}
                 {% endif %}
             </div>
 
             <div class="column">
                 <br>
+                <div class="container">
+                    <form method="POST">
+                        <label for="startYear">Starting Year: </label>
+                        <select id="startYear" name="startYear" value="{{currentStartYear}}">
+                            {% for startYear in startYears %}
+                                <option value="{{startYear}}" {% if startYear == currentStartYear %} selected="true" {% endif %}>{{startYear[0:4]}}</option>
+                            {% endfor %}
+                        </select>
+                        <button type="submit" name="action" formaction="/changestartyear">Submit</button>
+                    </form>
+                </div>
+                <br>
+                
                 <div class="container">
                     <form method="POST">
                         <label for="code">Course Code: </label>
